style.css:=> improved text color for easy reading in light mode, Controls.js:=> using fastscrollend instead of preventOverlaps to keep the timeline from glitching sometime

--- a/sources/style.css
+++ b/sources/style.css
@@ -2,7 +2,7 @@
 
 :root {
   /* LIGHT THEME */
-  --text-light: #272726;
+  --text-light: #fff;
   --background-light: #e6e6e6;
   --accent-light: #e4977ba2;
   --gradient1-light: #f3904f;
